<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.informationScreen.InformationFragment">

    <TextView
        android:id="@+id/textViewInformationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/gothamssm_bold"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:text="@string/fragment_information_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInformationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/information_description"
        android:textAlignment="textStart"
        android:fontFamily="@font/gothamssm_book"
        android:textColor="@color/medium"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformationTitle" />


    <TextView
        android:id="@+id/textViewInformationTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/gothamssm_bold"
        android:text="@string/logo_for_DTT_image"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformationText" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/dtt_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformationTitle2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <TextView
            android:id="@+id/textViewInformationBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamssm_book"
            android:text="@string/by_dtt"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInformationText" />

        <TextView
            android:id="@+id/textViewInformationDTTLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamssm_book"
            android:text="@string/dtt_link"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInformationText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>