<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginHorizontal="7dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewHouse"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@color/light"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedCornersForImageView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/imageViewHouse">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/gothamssm_medium"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$35000" />

            <TextView
                android:id="@+id/tv_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothamssm_light"
                android:textColor="@color/light"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                tools:text="Грув стрит" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewHouse">

            <TextView
                android:id="@+id/tv_bedroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/light"
                android:maxLines="1"
                android:text="@string/default_bedroom_amount"
                app:drawableLeftCompat="@drawable/ic_bed" />

            <TextView
                android:id="@+id/tv_bathroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/light"
                android:maxLines="1"
                android:text="@string/default_bathroom_amount"
                app:drawableLeftCompat="@drawable/ic_bath" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/light"
                android:maxLines="1"
                android:text="@string/default_size_amount"
                app:drawableLeftCompat="@drawable/ic_layers" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/light"
                android:maxLines="1"
                android:text="@string/default_distance"
                app:drawableLeftCompat="@drawable/ic_location" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>