<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/houseDetailsFragment"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    tools:context=".ui.houseDetailsScreen.HouseDetailsFragment">


    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewHouseDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-20dp"
            android:src="@drawable/ic_whatshot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutMainInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_for_linear"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollViewHouseContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="@+id/imageViewHouse">

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/gothamssm_bold"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:maxLines="1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="$35000" />


                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageViewHouse">

                            <TextView
                                android:id="@+id/tv_bedroom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="5dp"
                                android:drawablePadding="5dp"
                                android:maxLines="1"
                                android:text="@string/default_bedroom_amount"
                                android:textColor="@color/light"
                                app:drawableLeftCompat="@drawable/ic_bed" />

                            <TextView
                                android:id="@+id/tv_bathroom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="5dp"
                                android:drawablePadding="5dp"
                                android:maxLines="1"
                                android:text="@string/default_bathroom_amount"
                                android:textColor="@color/light"
                                app:drawableLeftCompat="@drawable/ic_bath" />

                            <TextView
                                android:id="@+id/tv_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="5dp"
                                android:drawablePadding="5dp"
                                android:maxLines="1"
                                android:text="@string/default_size_amount"
                                android:textColor="@color/light"
                                app:drawableLeftCompat="@drawable/ic_layers" />

                            <TextView
                                android:id="@+id/tv_distance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="5dp"
                                android:drawablePadding="5dp"
                                android:maxLines="1"
                                android:text="@string/default_distance"
                                android:textColor="@color/light"
                                app:drawableLeftCompat="@drawable/ic_location" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"

                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewDescriptionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamssm_bold"
                            android:text="Description"
                            android:textColor="@color/black"
                            android:textSize="18dp" />


                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/information_description"
                            android:textColor="@color/medium"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewLocationTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/gothamssm_bold"
                            android:text="Location"
                            android:textColor="@color/black"
                            android:textSize="18dp" />



                        <LinearLayout
                            android:id="@+id/linearLayoutGoogleMaps"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:orientation="vertical"
                            android:layout_marginTop="20dp">
                            <fragment
                                android:id="@+id/houseLocationMap"
                                android:name="com.google.android.gms.maps.SupportMapFragment"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
